--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "antd": "^5.24.6",
+    "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
@@ -33,6 +34,7 @@
     "react-facebook-login-lite": "^1.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
