--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
@@ -56,7 +57,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^3.3.0",
     "vite": "^5.1.4"
   },
   "browserslist": {
