--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "mongoose-paginate-v2": "^1.9.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
