--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.11.4",
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -35,6 +36,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-qr-code": "^2.0.15",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
